@@ -29,7 +29,7 @@
 
 #define ZBX_MAX_WEBPAGE_SIZE	(1 * 1024 * 1024)
 static const char URI_PROHIBIT_CHARS[] = {0x1,0x2,0x3,0x4,0x5,0x6,0x7,0x8,0x9,0xA,0xB,0xC,0xD,0xE,0xF,0x10,0x11,0x12,\
-	0x13,0x14,0x15,0x16,0x17,0x18,0x19,0x1A,0x1B,0x1C,0x1D,0x1E,0x1F,0x7F};
+	0x13,0x14,0x15,0x16,0x17,0x18,0x19,0x1A,0x1B,0x1C,0x1D,0x1E,0x1F,0x7F,0};
 
 static int	get_http_page(const char *host, const char *path, unsigned short port, char *buffer,
 		size_t max_buffer_len, char **error)
@@ -77,7 +77,8 @@ static int	get_http_page(const char *host, const char *path, unsigned short port
 
 	if (FAIL == ret)
 	{
-		zabbix_log(LOG_LEVEL_DEBUG, "HTTP get error: %s", zbx_socket_strerror());
+		*error = zbx_dsprintf(NULL, "HTTP get error: %s", zbx_socket_strerror());
+		zabbix_log(LOG_LEVEL_DEBUG, "%s", *error);
 		return SYSINFO_RET_FAIL;
 	}
 
